# wzlib-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-demo.yml
demo/: README.md  app.js  index.html  search-worker.js  serve.mjs  styles.css
demo/js/: app.js  file-handlers.js  media.js  property-view.js  save.js  search.js  state.js  tree-view.js  utils.js  wasm-dispatch.js
src/: lib.rs  wasm_api.rs
src/crypto/: aes_encryption.rs  constants.rs  crc32.rs  custom_encryption.rs  maple_crypto.rs  mod.rs  snow2.rs  snow2_tables.rs
src/image/: dxt.rs  encode.rs  mod.rs  pixel.rs
src/wz/: binary_reader.rs  binary_writer.rs  directory.rs  error.rs  file.rs  header.rs  image.rs  keys.rs  list_file.rs  mcv.rs  mod.rs  ms_file.rs  types.rs
src/wz/properties/: mod.rs
ts-wrapper/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
ts-wrapper/src/: index.ts  types.ts  wz-node.ts  wz-parser.ts
