[package]
name = "wzlib-rs"
version = "0.1.0"
edition = "2021"
description = "MapleStory WZ file parser — Rust core with WASM bindings"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
aes = "0.8"
cipher = "0.4"
byteorder = "1"
thiserror = "2"
texture2ddecoder = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
